# grpc-vcpkg

./: CMakeLists.txt  arm-linaro-toolchain.cmake  arm-linaro.cmake  run.sh
src/: CMakeLists.txt  greeter_server.cc
